Config setting for FAQ Url

--- a/Purchasing.Mvc/Views/Help/Index.cshtml
+++ b/Purchasing.Mvc/Views/Help/Index.cshtml
@@ -64,7 +64,7 @@
     </section>
     <section id="faq" class="container split">
         <header>
-            <a class="button" href="http://computing.caes.ucdavis.edu/documentation/#purchasing" target="_blank">
+            <a class="button" href="@CloudConfigurationManager.GetSetting("FAQUrl")" target="_blank">
                 Knowledge Base
             </a>
         </header>
