--- a/Purchasing.Mvc/Views/Order/_ReviewOrderDetails.cshtml
+++ b/Purchasing.Mvc/Views/Order/_ReviewOrderDetails.cshtml
@@ -132,7 +132,8 @@
                             <div class="adr">
                                 <span class="street-address">@Model.Vendor.Line1</span>
                                 <span class="locality">@Model.Vendor.City</span>
-                                <span class="region" title="California">@Model.Vendor.State</span>
+                                <span class="region" title="State">@Model.Vendor.State</span>
+                                <span class="postal-code">@Model.Vendor.Zip</span>
                             </div>
                             @if (!string.IsNullOrWhiteSpace(Model.Vendor.Phone) || !string.IsNullOrWhiteSpace(Model.Vendor.Fax))
                             {
