New URL for help caes help

--- a/Purchasing.Mvc/Views/Help/Index.cshtml
+++ b/Purchasing.Mvc/Views/Help/Index.cshtml
@@ -30,7 +30,7 @@
 </section>
     <section id="support" class="container split">
         <header>
-            <a href="https://secure.caes.ucdavis.edu/help/Ticket/Submit?appName=opp?appName=opp" target="_blank">
+            <a href="https://caeshelp.ucdavis.edu/?appname=OPP" target="_blank">
                 <img src='@Url.Content("~/Images/gethelp.png")' alt="get help"/>
             </a>
         </header>
