--- a/Purchasing.Mvc/Views/History/Index.cshtml
+++ b/Purchasing.Mvc/Views/History/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model FilteredOrderListModelDto
+﻿@using System.Web.Configuration
+@model FilteredOrderListModelDto
            
 @{
     var extra = "";
@@ -13,7 +14,7 @@
     ViewBag.LoadFixedHeaders = true;
     ViewBag.LastRefreshTitle = string.Format("The data on this page is current as of {0}-- recent changes may make take up to five minutes to process. Press F5 to refresh.", @ViewBag.IndexLastModified.ToString("dddd h:mm:ss tt"));
     ViewBag.LastRefresh = string.Format("Results current as of {0}", @ViewBag.IndexLastModified.ToString("dddd h:mm tt"));
-    
+    ViewBag.CustomDataTable = true;
    
 }
 
@@ -37,49 +38,99 @@
 
 @section AdditionalScripts
 {
+
     @Scripts.Render("~/bundles/history")
     <script type="text/javascript">
-        $(function () {
-            $("#filterToggle").click(function () {
+        $(function() {
+            var table = $(".dt-table, .datatable").dataTable({
+                bJQueryUI: false,
+                sPaginationType: "full_numbers",
+                oLanguage: { sSearch: "Filter Within These Results: " },
+                iDisplayLength: window.Configuration.DataTablesPageSize,
+                sDom: 'T<"clear">lfrtip',
+                "fnDrawCallback": function (oSettings) {
+                    $(".showTip").qtip({
+                        overwrite: false,
+                        show: {
+                            event: 'mouseenter focus',
+                            ready: false
+                        },
+                        hide: {
+                            event: 'mouseleave blur'
+                        },
+                        position: {
+                            my: 'bottom center',
+                            at: 'top center'
+                        }
+                    });
+                    $(".workgroupDetails").click(function() {
+                        var temp = $(this);
+                        var orderId = temp.data("id");
+                        var role = temp.data("role");
+                        //alert(orderId + role);
+                        var url = '@Url.Action("GetPeeps", "Order")';
+                        var dialogList = $("#peepsUl");
+                        dialogList.empty();
+                        $("#peepsDialog").dialog("open");
+                        $("#peepsLoaderId").show();
+                        $.getJSON(url,
+                            { id: orderId, orderStatusCodeId: role },
+                            function(result) {
+                                $("#peepsLoaderId").hide();
+                                if (result == null || result.success == false) {
+                                    alert("There was a problem getting the list of users.");
+                                } else {
+                                    $(result.peeps).each(function() {
+                                        dialogList.append("<li>" + this.FullName + " " + this.Email + "</li>");
+                                    });
+                                }
+                            });
+                    });
+                },
+                oTableTools: {
+                    sSwfPath: window.Configuration.TableToolsSwf,
+                    aButtons: ["copy", "xls"]
+                }
+            });
+
+            $.each($(".dataTables_wrapper"), function(index, item) {
+                RearranngeDataTable($(item));
+            });
+
+            if (window.Configuration.LoadFixedHeaders) {
+                new FixedHeader(table);
+            };
+        });
+
+
+        $(function() {
+            $("#filterToggle").click(function() {
                 $(".dt-table-filter-header").toggle();
                 $(this).toggleClass("selected");
                 event.preventDefault();
             });
         });
 
-        $(document).ready(function () {
+        $(document).ready(function() {
             $("#peepsDialog").dialog({
                 autoOpen: false,
                 height: 610,
                 width: 500,
                 modal: true,
                 buttons: {
-                    "Cancel": function () {
+                    "Cancel": function() {
                         $("#peepsUl").empty();
                         $("#peepsLoaderId").hide();
                         $(this).dialog("close");
                     }
                 }
             });
-            
-            $(".showTip").qtip({
-                overwrite: false,
-                show: {
-                    event: 'mouseenter focus',
-                    ready: false
-                },
-                hide: {
-                    event: 'mouseleave blur'
-                },
-                position: {
-                    my: 'bottom center',
-                    at: 'top center'
-                }
-            });
+
+
         });
-        
-        $(function () {
-            $(".workgroupDetails").click(function () {
+
+        $(function() {
+            $(".workgroupDetails").click(function() {
                 var temp = $(this);
                 var orderId = temp.data("id");
                 var role = temp.data("role");
@@ -89,29 +140,31 @@
                 dialogList.empty();
                 $("#peepsDialog").dialog("open");
                 $("#peepsLoaderId").show();
-                $.getJSON(url, { id: orderId, orderStatusCodeId: role }, function (result) {
-                    $("#peepsLoaderId").hide();
-                    if (result == null || result.success == false) {
-                        alert("There was a problem getting the list of users.");
-                    } else {
-                        $(result.peeps).each(function () {
-                            dialogList.append("<li>" + this.FullName + " " + this.Email  + "</li>");
-                        });
-                    }
-                });
+                $.getJSON(url,
+                    { id: orderId, orderStatusCodeId: role },
+                    function(result) {
+                        $("#peepsLoaderId").hide();
+                        if (result == null || result.success == false) {
+                            alert("There was a problem getting the list of users.");
+                        } else {
+                            $(result.peeps).each(function() {
+                                dialogList.append("<li>" + this.FullName + " " + this.Email + "</li>");
+                            });
+                        }
+                    });
             });
         });
     </script>
 }
 
-        
 
 
-@if (string.IsNullOrWhiteSpace(Model.ShowLast))
-{
-    @Html.Partial("_OrderFilter", Model)
-}
-    
-@Html.Partial("_OrdersTable", Model)
 
-@Html.Partial("_PeepsDialog")
+    @if (string.IsNullOrWhiteSpace(Model.ShowLast))
+    {
+        @Html.Partial("_OrderFilter", Model)
+    }
+
+    @Html.Partial("_OrdersTable", Model)
+
+    @Html.Partial("_PeepsDialog")
