--- a/Purchasing.Mvc/Views/Shared/_Layout.cshtml
+++ b/Purchasing.Mvc/Views/Shared/_Layout.cshtml
@@ -249,6 +249,7 @@
         d.TableToolsSwf = '@Url.Content("~/Content/DataTables-1.9.0/extras/TableTools/media/swf/copy_cvs_xls.swf")';
         d.LoadFixedHeaders = @(ViewBag.LoadFixedHeaders == null ? "false" : ViewBag.LoadFixedHeaders.ToString().ToLower());
         d.PersonLookup = '@ConfigurationManager.AppSettings["PersonLookupUrl"]';
+        d.CustomDataTable = @(ViewBag.CustomDataTable == null ? "false" : ViewBag.CustomDataTable.ToString().ToLower());
     }(window));
     </script>
     
