--- a/Purchasing.Mvc/Views/History/Index.cshtml
+++ b/Purchasing.Mvc/Views/History/Index.cshtml
@@ -61,25 +61,10 @@
                     }
                 }
             });
-            
-            $(".showTip").qtip({
-                overwrite: false,
-                show: {
-                    event: 'mouseenter focus',
-                    ready: false
-                },
-                hide: {
-                    event: 'mouseleave blur'
-                },
-                position: {
-                    my: 'bottom center',
-                    at: 'top center'
-                }
-            });
         });
         
         $(function () {
-            $(".workgroupDetails").click(function () {
+            $('.dt-table').on('click', '.workgroupDetails',function () {
                 var temp = $(this);
                 var orderId = temp.data("id");
                 var role = temp.data("role");
