--- a/Purchasing.Mvc/Views/History/Index.cshtml
+++ b/Purchasing.Mvc/Views/History/Index.cshtml
@@ -9,8 +9,9 @@
     ViewBag.Title = "Orders" + extra;
     ViewBag.SingleColumn = false;
     ViewBag.GetMethod = "Index";
-    ViewBag.LoadTableTools = false;
-    ViewBag.LoadFixedHeaders = false;
+    ViewBag.LoadTableTools = true; //ignored
+    ViewBag.LoadFixedHeaders = true; //ignored 
+    ViewBag.DisableGlobalDataTables = true;
     ViewBag.LastRefreshTitle = string.Format("The data on this page is current as of {0}-- recent changes may make take up to five minutes to process. Press F5 to refresh.", @ViewBag.IndexLastModified.ToString("dddd h:mm:ss tt"));
     ViewBag.LastRefresh = string.Format("Results current as of {0}", @ViewBag.IndexLastModified.ToString("dddd h:mm tt"));
     
