--- a/Purchasing.Mvc/Views/History/Index.cshtml
+++ b/Purchasing.Mvc/Views/History/Index.cshtml
@@ -70,8 +70,8 @@
                 sPaginationType: "full_numbers",
                 oLanguage: { sSearch: "Filter Within These Results: " },
                 iDisplayLength: window.Configuration.DataTablesPageSize,
-                sDom: 'lBfrtip',
-                //sDom: 'T<"clear">lBfrtip',
+                //sDom: 'lBfrtip',
+                sDom: 'T<"clear">lBfrtip',
                 columnDefs: [
                     { 'bSortable': false, 'aTargets': [0] }
                 ],
@@ -105,9 +105,20 @@
                 fixedHeader: true
             });
 
-            //$.each($(".dataTables_wrapper"), function(index, item) {
-            //    RearranngeDataTable($(item));
-            //});
+            $.each($(".dataTables_wrapper"), function(index, item) {
+                RearranngeDataTable($(item));
+            });
+            function RearranngeDataTable($wrapper) {
+                var $dtt = $wrapper.find(".dt-buttons");
+                var $length = $wrapper.find(".dataTables_length");
+
+                // dtt is present, move those accordingly
+                if ($dtt.length > 0) {
+                    $("<div>").addClass("dt-buttons").append($dtt.find("button")).insertAfter($length.find("label"));
+                    //$wrapper.find(".DTTT_container").remove();
+                    $wrapper.find(".clear").remove();
+                }
+            }
             });
 
 
