Just show what the function looked like before my clumsy changes

--- a/Purchasing.Mvc/Views/History/Index.cshtml
+++ b/Purchasing.Mvc/Views/History/Index.cshtml
@@ -108,6 +108,19 @@
             $.each($(".dataTables_wrapper"), function(index, item) {
                 RearranngeDataTable($(item));
             });
+
+            //Original:
+            //function RearranngeDataTable($wrapper) {
+            //    var $dtt = $wrapper.find(".DTTT_container");
+            //    var $length = $wrapper.find(".dataTables_length");
+
+            //    // dtt is present, move those accordingly
+            //    if ($dtt.length > 0) {
+            //        $("<div>").addClass("dttt_buttons").append($dtt.find("button")).insertAfter($length.find("label"));
+            //        $wrapper.find(".DTTT_container").remove();
+            //        $wrapper.find(".clear").remove();
+            //    }
+            //}
             function RearranngeDataTable($wrapper) {
                 var $dtt = $wrapper.find(".dt-buttons");
                 var $length = $wrapper.find(".dataTables_length");
