--- a/Purchasing.Mvc/Views/History/Index.cshtml
+++ b/Purchasing.Mvc/Views/History/Index.cshtml
@@ -42,7 +42,11 @@
     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/fixedheader/3.1.7/css/fixedHeader.dataTables.css"/>
     @*<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/dt/jszip-2.5.0/dt-1.10.22/b-1.6.5/b-html5-1.6.5/fh-3.1.7/datatables.min.css"/>*@
  
-    
+    <style>
+        button.dt-button{
+            color: white;
+            }
+    </style>
 }
 
 @section AdditionalScripts
