--- a/Purchasing.Mvc/Views/History/AdminOrders.cshtml
+++ b/Purchasing.Mvc/Views/History/AdminOrders.cshtml
@@ -4,6 +4,7 @@
     ViewBag.Title = "Admin Orders";
     ViewBag.SingleColumn = false;
     ViewBag.GetMethod = "AdminOrders";
+    ViewBag.DisableGlobalDataTables = true;
     ViewBag.LoadFixedHeaders = true;
     ViewBag.LastRefreshTitle = string.Format("The data on this page is current as of {0}-- recent changes may make take up to five minutes to process. Press F5 to refresh.", @ViewBag.IndexLastModified.ToString("dddd h:mm:ss tt"));
     ViewBag.LastRefresh = string.Format("Results current as of {0}", @ViewBag.IndexLastModified.ToString("dddd h:mm tt"));
@@ -22,9 +23,24 @@
 	</ul>
 }
 
+@section AdditionalStyles
+{
+    @*Datatable css being used is the old one in the bundle. If I grab the current one and use here, some input fields are blue*@ 
+    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/buttons/1.6.5/css/buttons.dataTables.css"/>
+    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/fixedheader/3.1.7/css/fixedHeader.dataTables.css"/>
+
+    <style>
+        button.dt-button{
+            color: white;
+        }
+    </style>
+}
+
 @section AdditionalScripts
 {
-@Scripts.Render("~/bundles/history")
+    @*The js includes jszip, datatables, buttons (for copy, excel, csv) and fixed header*@
+    <script type="text/javascript" src="https://cdn.datatables.net/v/dt/jszip-2.5.0/dt-1.10.22/b-1.6.5/b-html5-1.6.5/fh-3.1.7/datatables.min.js"></script>
+
     <script type="text/javascript">
         $(function () {
             $("#filterToggle").click(function () {
@@ -32,7 +48,66 @@
                 $(this).toggleClass("selected");
                 event.preventDefault();
             });
+
+                        var table = $(".dt-table, .datatable").dataTable({
+                bJQueryUI: false,
+                sPaginationType: "full_numbers",
+                oLanguage: { sSearch: "Filter Within These Results: " },
+                iDisplayLength: window.Configuration.DataTablesPageSize,
+                //sDom: 'lBfrtip',
+                sDom: 'T<"clear">lBfrtip',
+                columnDefs: [
+                    { 'bSortable': false, 'aTargets': [0] }
+                ],
+                "buttons": [
+                    {
+                        extend: 'copyHtml5'
+                    },
+                    {
+                        extend: 'excelHtml5'
+                    },
+                    {
+                        extend: 'csvHtml5'
+                    }
+                ],
+                fnDrawCallback: function(oSettings) {
+                    $(".showTip").qtip({
+                        overwrite: false,
+                        show: {
+                            event: "mouseenter focus",
+                            ready: false
+                        },
+                        hide: {
+                            event: "mouseleave blur"
+                        },
+                        position: {
+                            my: "bottom center",
+                            at: "top center"
+                        }
+                    });
+                },
+                fixedHeader: true
+            });
+
+            $.each($(".dataTables_wrapper"), function(index, item) {
+                RearranngeDataTable($(item));
+            });
+
+            //This was copied from startup.js and modified so it works better with the new export buttons. It isn't 100% working (an empty div is created)
+            function RearranngeDataTable($wrapper) {
+                var $dtt = $wrapper.find(".dt-buttons");
+                var $length = $wrapper.find(".dataTables_length");
+
+                // dtt is present, move those accordingly
+                if ($dtt.length > 0) {
+                    $("<div>").addClass("dt-buttons").append($dtt.find("button")).insertAfter($length.find("label"));
+                    //$wrapper.find(".DTTT_container").remove();
+                    $wrapper.find(".clear").remove();
+                }
+            }
         });
+
+
 
         $(document).ready(function () {
             $("#peepsDialog").dialog({
